[gd_scene load_steps=4 format=3 uid="uid://b25ew1dv5tplj"]

[ext_resource type="Texture2D" uid="uid://bh1t3rbwbygvj" path="res://assets/backs.png" id="1_8spll"]
[ext_resource type="Script" path="res://gdscript/card.gd" id="1_irl4d"]
[ext_resource type="Texture2D" uid="uid://dpg3omqipvkb5" path="res://assets/values2.png" id="3_nvumf"]

[node name="Card" type="Node2D"]
scale = Vector2(0.85, 0.85)
script = ExtResource("1_irl4d")

[node name="back" type="Sprite2D" parent="."]
texture = ExtResource("1_8spll")
region_enabled = true
region_rect = Rect2(0, 0, 71, 95)

[node name="front" type="Sprite2D" parent="."]
texture = ExtResource("3_nvumf")
region_enabled = true
region_rect = Rect2(71, 190, 71, 95)

[node name="goto_anim" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="goto_wait" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="reveal_wait" type="Timer" parent="."]
one_shot = true

[node name="reveal_anim" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[connection signal="timeout" from="goto_anim" to="." method="_on_goto_anim_timeout"]
[connection signal="timeout" from="goto_wait" to="." method="_on_goto_wait_timeout"]
[connection signal="timeout" from="reveal_wait" to="." method="_on_reveal_wait_timeout"]
[connection signal="timeout" from="reveal_anim" to="." method="_on_reveal_anim_timeout"]
